Especificar fecha actual y original

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>Asistencia de Alumnos</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="icon" href="img/logoSena.png">
 </head>
 <body>
     <h1>Registro de Asistencia de Alumnos</h1>
+    <h3 class="June">Julio</h3>
     <table id="attendanceTable">
         <thead>
             <tr>
                 <th>Alumno</th>
                 <th>Día</th>
-                <th>Hora</th>
                 <th>Asistió</th>
                 <th>No Asistió</th>
                 <th>Excusa</th>
@@ -25,7 +26,6 @@
             <tr>
                 <td>Alex David Gonzalez Pabuena</td>
                 <td>Lunes</td>
-                <td>08:00</td>
                 <td><input type="checkbox" name="attendance1" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance1" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance1" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -34,7 +34,6 @@
             <tr>
                 <td>Jose Carlos Lozano Velasquez</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance2" data-status="asistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance2" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance2" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -43,7 +42,6 @@
             <tr>
                 <td>David Jose Rua Ramirez</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance3" data-status="asistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance3" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance3" data-status="excusa" onclick="updateRowColor(this)" ></td>
@@ -52,7 +50,6 @@
             <tr>
                 <td>Juan Carlos Narvaez Orellano</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance4" data-status="asistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance4" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance4"  data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -61,7 +58,6 @@
             <tr>
                 <td>Natalia Del Carmen Palacio </td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendace5" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendace5" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendace5" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -70,7 +66,6 @@
             <tr>
                 <td>Junior Ivan Carvajal Carrillo</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance6" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance6" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance6" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -79,7 +74,6 @@
             <tr>
                 <td>Juan David Guzman Mendoza</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance7" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance7" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance7" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -88,7 +82,6 @@
             <tr>
                 <td>Larson David Torres Duncan</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance8" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance8" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance8" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -97,7 +90,6 @@
             <tr>
                 <td>Roberto Carlos Estrada Osorio</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance9" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance9" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance9" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -106,7 +98,6 @@
             <tr>
                 <td>Zharick Yileicis Basanta Pizarro</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance10" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance10" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance10" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -115,7 +106,6 @@
             <tr>
                 <td>Maria Alejandra Herrera Arellana </td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance11" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance11" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance11" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -125,7 +115,6 @@
             <tr>
                 <td>Jam Piere Molina Salazar</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance12" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance12" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance12" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -135,7 +124,6 @@
             <tr>
                 <td>Eliana Carracedo Navarro</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance13" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance13" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance13" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -144,7 +132,6 @@
             <tr>
                 <td>Mishelle Andrea Echeverria Astorga</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance14" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance14" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance14" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -153,7 +140,6 @@
             <tr>
                 <td>Efrain De Los Reyes Luna</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance15" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance15" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance15" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -162,7 +148,6 @@
             <tr>
                 <td>Johan Sebastian Semprum Polo</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance16" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance16" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance16" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -171,7 +156,6 @@
             <tr>
                 <td>Alan David Camargo Camargo</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance17" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance17" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance17" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -180,7 +164,6 @@
             <tr>
                 <td>Luis David Jimenez Berdugo</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance18" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance18" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance18" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -189,7 +172,6 @@
             <tr>
                 <td>Sebastian Andres Montealegre Rodriguez</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance19" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance19" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance19" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -198,7 +180,6 @@
             <tr>
                 <td>Yaine Marcela Garecarnt Hernandez</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance20" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance20" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance20" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -208,7 +189,6 @@
             <tr>
                 <td>Ismael David Cuello Mercado</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance21" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance21" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance21" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -218,7 +198,6 @@
             <tr>
                 <td>Henry Castro Mayoral </td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendace22" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendace22" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendace22" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -227,7 +206,6 @@
             <tr>
                 <td>Esteban Calvo Hernandez </td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance23" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance23" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance23" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -237,7 +215,6 @@
             <tr>
                 <td>Santiago Jose Villalobos Guerra</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance24" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance24" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance24" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -247,7 +224,6 @@
             <tr>
                 <td>Fabio Luis Molina Ramirez</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance25" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance25" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance25" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -257,7 +233,6 @@
             <tr>
                 <td>Keiner Jose Muñoz Pallares</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance26" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance26" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance26" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -267,7 +242,6 @@
             <tr>
                 <td>José Luis Ibáñez Silvera</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance27" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance27" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance27" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -277,7 +251,6 @@
             <tr>
                 <td>Andres Felipe Sandoval Nuñez</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance28" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance28" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance28" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -286,7 +259,6 @@
             <tr>
                 <td>Isaac David Quintero Lobo</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance29" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance29" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance29" data-status="excusa" onclick="updateRowColor(this)"></td>
@@ -295,7 +267,6 @@
             <tr>
                 <td>Sebastian Cantor Gomez</td>
                 <td>Martes</td>
-                <td>09:00</td>
                 <td><input type="checkbox" name="attendance30" data-status="asistio" onclick="updateRowColor(this)"></td> 
                 <td><input type="checkbox" name="attendance30" data-status="noAsistio" onclick="updateRowColor(this)"></td>
                 <td><input type="checkbox" name="attendance30" data-status="excusa" onclick="updateRowColor(this)"></td>
