Hacerlo que sea responsive

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Registro de Asistencia de Alumnos</h1>
     <h3 class="June">Julio</h3>
+    <h3 class="Fecha">Fecha</h3>
     <table id="attendanceTable">
         <thead>
             <tr>
